# truthfulQA

./: .gitignore  EXPERIMENT_STATUS.md  README.md  latexmkrc  pyproject.toml
paper/: custom.bib  main.bbl  main.blg  main.tex
paper/tables/: analysis_metadata.json  hardest_categories.tex  hardest_categories_local.tex  main_results.tex  paired_tests.tex
scripts/: analyze_for_paper.py  compare_local_to_frontier.py  run_local_full_suite.sh  run_local_phase2.sh  run_openai_full.sh
src/truthfulqa_bench/: __init__.py  budget.py  cli.py  conditions.py  config.py  costs.py  dataset.py  manifest.py  prompting.py  providers.py  results.py  runner.py
tests/: test_analyze_for_paper.py  test_budget.py  test_cli.py  test_dataset.py  test_local_provider.py  test_prompting.py  test_providers.py  test_results.py  test_runner_resume.py
